logs/xnet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xnet'...
Listing './lib/python3.5/site-packages/xnet/debug'...
Listing './lib/python3.5/site-packages/xnet/net'...
Listing './lib/python3.5/site-packages/xnet/net/http'...
Compiling './lib/python3.5/site-packages/xnet/net/http/__init__.py'...
***   File "./lib/python3.5/site-packages/xnet/net/http/__init__.py", line 28
    print errmsg
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xnet/net/ipv4'...
Compiling './lib/python3.5/site-packages/xnet/net/ipv4/__init__.py'...
***   File "./lib/python3.5/site-packages/xnet/net/ipv4/__init__.py", line 100
    (i, 0xffffffffL & (0xffffffffL << (32 - i))) for i in xrange(0, 33)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xnet/net/ssh'...
Listing './lib/python3.5/site-packages/xnet/packages'...
Listing './lib/python3.5/site-packages/xnet/packages/urllib3'...
Listing './lib/python3.5/site-packages/xnet/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/xnet/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/xnet/testing'...
Listing './lib/python3.5/site-packages/xnet/tests'...
Listing './lib/python3.5/site-packages/xnet/tools'...
Compiling './lib/python3.5/site-packages/xnet/tools/__init__.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/__init__.py", line 248
    print open(fname).read()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/netcats.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/netcats.py", line 119
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/resolv.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/resolv.py", line 69
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/run.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/run.py", line 433
    print ToolImplementation.__format_help__()
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/sslinfo.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/sslinfo.py", line 81
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/tcpclient.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/tcpclient.py", line 114
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/tcpstate.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/tcpstate.py", line 67
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/webget.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/webget.py", line 185
    except xnet.packages.urllib3.exceptions.MaxRetryError, e:
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xnet/tools/xinfo.py'...
***   File "./lib/python3.5/site-packages/xnet/tools/xinfo.py", line 116
    except xnet.packages.urllib3.exceptions.MaxRetryError, e:
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xnet-0.3.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
